--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         </nav>
     </header>
     <main>
-        <p>This is the about page.</p>
+        <p>This is the about page. hihasfihaifha </p>
     </main>
     <footer>
         <p>© 2025 Teodor Gerov</p>
