--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
     <main id="contact" class="page">
         <h1>Contact</h1>
         <p>This is the contact page.</p>
+        <a href="https://www.instagram.com/tedigerov/" target="_blank" style="font-size: 2em; color: #b9455a;">
+            <i class="fab fa-instagram"></i>
+        </a>
     </main>
 
     <footer>
