--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     </main>
 
     <!-- Contact Page -->
+    <!-- Subscription Form (Add this inside your Contact page) -->
     <main id="contact" class="page">
         <h1>Contact</h1>
         <p>If you'd like to contact me, feel free to reach out via Instagram:</p>
@@ -138,7 +139,17 @@
                 <i class="fab fa-instagram"></i> Instagram
             </a>
         </div>
+        
+        <h2>Subscribe for Updates</h2>
+        <p>Enter your email below to receive updates when a new story is posted on the website!</p>
+        <form id="subscription-form">
+            <input type="email" id="email" name="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe</button>
+        </form>
+        <p id="success-message" style="color: green; display: none;">Thank you for subscribing!</p>
+        <p id="error-message" style="color: red; display: none;">An error occurred. Please try again.</p>
     </main>
+
 
     <footer>
         <p>© 2025 Teodor Gerov</p>
